k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-backend-deployment
  labels:
    app: crud-backend
spec:
  replicas: 2 # High Availability: If one Pod crashes, the other handles traffic seamlessly
  selector:
    matchLabels:
      app: crud-backend
  template:
    metadata:
      labels:
        app: crud-backend
    spec:
      containers:
        - name: backend-api
          # Pulls the exact production image built by your GitHub Actions
          image: devopsflow999/crud-backend:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # Injecting environment parameters directly into the cluster runtime
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: crud-backend
  ports:
    - protocol: TCP
      port: 3000      # The port exposing the service internally to the cluster
      targetPort: 3000 # The port the container is listening on
  type: ClusterIP    # Keeps the API hidden securely inside the private cluster network
