k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-frontend-deployment
  labels:
    app: crud-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-frontend
  template:
    metadata:
      labels:
        app: crud-frontend
    spec:
      containers:
        - name: frontend-ui
          image: devopsflow999/crud-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: crud-frontend
  ports:
    - protocol: TCP
      port: 80       # Public HTTP port
      targetPort: 80  # Nginx internal port
  type: LoadBalancer # Exposes the application to the internet via a public IP
